--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="bosio@todo.todo">bosio</maintainer>
+  <maintainer email="michele2.bosio@mail.polimi.it">Michele Bosio</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
