--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.0.2)
 project(first_project)
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs nav_msgs geometry_msgs tf2 tf2_geometry_msgs tf)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs sensor_msgs nav_msgs geometry_msgs tf dynamic_reconfigure pcl_ros)
 find_package(Eigen3 REQUIRED)
+
+generate_dynamic_reconfigure_options(cfg/parameters.cfg)
 
 ## Declare a catkin package
 catkin_package()
@@ -16,3 +18,6 @@ target_link_libraries(gps_to_odom ${catkin_LIBRARIES})
 
 add_executable(odom_to_tf src/odom_to_tf.cpp)
 target_link_libraries(odom_to_tf ${catkin_LIBRARIES})
+
+add_executable(lidar_remap src/lidar_remap.cpp)
+target_link_libraries(lidar_remap ${catkin_LIBRARIES})
