--- a/cfg/parameters.cfg
+++ b/cfg/parameters.cfg
@@ -1,14 +1,14 @@
-#!/usr/bin/env python
-PACKAGE = "first_project"
+PACKAGE = "first_project" # Define project name;
 
-from dynamic_reconfigure.parameter_generator_catkin import *
+from dynamic_reconfigure.parameter_generator_catkin import * # Import the reconfigure library;
 
-gen = ParameterGenerator()
+gen = ParameterGenerator() # Define the generator;
 
+# The reconfigurable parameter in our project is an enum with the values already set;
 size_enum = gen.enum([gen.const("wheel_odom", str_t, "wheel_odom", "Wheel odom"),
                     gen.const("gps_odom", str_t, "gps_odom", "GPS odom")],
                     "Set header value")
 
-gen.add("odom", str_t, 0, "Choose value for lidar header", "wheel_odom", edit_method=size_enum)
+gen.add("odom", str_t, 0, "Choose value for lidar header", "wheel_odom", edit_method=size_enum) # Add the enum to the generator;
 
 exit(gen.generate(PACKAGE, "lidar_remap", "parameters"))
